# Code

Lecture4/: Lecture4.hs
Lecture8/: Lecture8.cabal
Solutions/PS10/: .devcontainer.json  Problems10.cabal  Problems10.hs  Tests.hs
Solutions/PS3/: Problems3.hs
Solutions/PS6/: .devcontainer.json
Solutions/PS7/: Problems7.hs  Tests.hs
Solutions/PS8/: .devcontainer.json
Solutions/PS9/: Problems9.cabal  Problems9.hs  Tests.hs
Solutions/Project1/: Interpreter.hs  Language.hs
