name:                Problems10
version:             0.1
build-type:          Simple
cabal-version:       >=1.10

executable Test
  main-is:             Tests.hs
  ghc-options:         -main-is Tests
  hs-Source-Dirs:      ./
  other-modules:       Problems10
  build-depends:       HUnit, base, random
  default-language:    Haskell2010
